--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/ProgAdmin/CreateUserProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/ProgAdmin/CreateUserProfile.cshtml
@@ -1,7 +1,7 @@
-﻿@model ClientPortal.Data.Entities.TD.TradingDeskAccount
+﻿@model DirectAgents.Domain.Entities.TD.Advertiser
 @{
-    var ajaxOptions = RazorHelpers.GetAjaxOptions("tdAccountsTab");
-    var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("tdAccountsTab", null, "Post");
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("progAdvertisersTab");
+    var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("progAdvertisersTab", null, "Post");
 }
 
 @using (Ajax.BeginForm(ajaxOpts_Post))
@@ -11,8 +11,12 @@
         <legend>Create UserProfile</legend>
         <table>
             <tr>
-                <td>@Html.LabelFor(m => m.TradingDeskAccountId)</td>
-                <td>@Html.DisplayFor(m => m.TradingDeskAccountId)</td>
+                <td>@Html.LabelFor(m => m.Id)</td>
+                <td>@Html.DisplayFor(m => m.Id)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.Name, "Advertiser")</td>
+                <td>@Html.DisplayFor(m => m.Name)</td>
             </tr>
             <tr>
                 <td>Username</td>
@@ -20,17 +24,17 @@
             </tr>
             <tr>
                 <td>Password</td>
-                <td>@Html.TextBox("password", null, new { id = "tdPassword" })<input type="button" value="Generate Password" onclick="GenerateTDPassword()" /></td>
+                <td>@Html.TextBox("password", null, new { id = "progPassword" })<input type="button" value="Generate Password" onclick="GenerateProgPassword()" /></td>
             </tr>
         </table>
         <br />
         <input type="submit" value="Save" />
-            &nbsp;@Ajax.ActionLink("cancel", "TradingDeskAccounts", ajaxOptions)
+            &nbsp;@Ajax.ActionLink("cancel", "Advertisers", ajaxOptions)
     </fieldset>
 }
 
 <script>
-    function GenerateTDPassword() {
+    function GenerateProgPassword() {
         var chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZabcdefghiklmnopqrstuvwxyz";
         var string_length = 8;
         var randomstring = '';
@@ -38,6 +42,6 @@
             var rnum = Math.floor(Math.random() * chars.length);
             randomstring += chars.substring(rnum, rnum + 1);
         }
-        $('#tdPassword').val(randomstring);
+        $('#progPassword').val(randomstring);
     }
 </script>
