--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Details.cshtml
@@ -1,12 +1,6 @@
 ﻿@model ClientPortal.Data.Contexts.Advertiser
-
 @{
-    ViewBag.Title = "Details";
-    var ajaxOptions = new AjaxOptions()
-    {
-        UpdateTargetId = "advertisersTab",
-        HttpMethod = "Get"
-    };
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("advertisersTab");
 }
 
 <h4>Advertiser Details</h4>
