update Contacts views

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Create.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ClientPortal.Data.Contexts.Contact
-
 @{
-    ViewBag.Title = "Create";
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("contactsTab");
+    var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("contactsTab", httpMethod: "Post");
 }
 
 <h4>Create Contact</h4>
 
-@using (Ajax.BeginForm(new AjaxOptions { UpdateTargetId = "contactsTab" }))
+@using (Ajax.BeginForm(ajaxOpts_Post))
 {
     @Html.ValidationSummary(true)
 
@@ -52,9 +52,7 @@
 }
 
 <div>
-    @Ajax.ActionLink("Back to List", "Index", new AjaxOptions() {
-        UpdateTargetId = "contactsTab", HttpMethod = "Get"
-    })
+    @Ajax.ActionLink("Back to List", "Index", ajaxOptions)
 </div>
 
 @section Scripts {
