--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Details.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Details.cshtml
@@ -1,12 +1,6 @@
 ﻿@model ClientPortal.Data.Contexts.Contact
-
 @{
-    ViewBag.Title = "Details";
-    var ajaxOptions = new AjaxOptions()
-    {
-        UpdateTargetId = "contactsTab",
-        HttpMethod = "Get"
-    };
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("contactsTab");
 }
 
 <h4>Contact Details</h4>
