--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Contacts/Index.cshtml
@@ -1,17 +1,11 @@
 ﻿@model IEnumerable<ClientPortal.Data.Contexts.Contact>
-
 @{
-    ViewBag.Title = "Index";
-    var ajaxOptions = new AjaxOptions()
-    {
-        UpdateTargetId = "contactsTab",
-        HttpMethod = "Get"
-    };
+    var ajaxOptions = RazorHelpers.GetAjaxOptions("contactsTab");
 }
 
-<p>
-    @Ajax.ActionLink("Create New Contact", "Create", ajaxOptions)
-</p>
+@Ajax.ActionLink("Create New Contact", "Create", ajaxOptions) |
+@Ajax.ActionLink("Refresh", "Index", ajaxOptions)
+
 <table>
     <tr>
         <th>
