--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -3,32 +3,55 @@
     ViewBag.Title = "Executive Summary";
 }
 
-<h2>@Model.ProgAdvertiser.Name</h2>
 
-<div id="gridMTD"></div>
-<div id="gridPrevMonth"></div>
+<div id="client_bar">
+	<div id="container">
+		<div class="client_logo"></div>
+        <div class="client_name">@Model.ProgAdvertiser.Name</div>
+    </div>
+</div>
+<div id="page_content"></div>
+    <div id="container">
+    	<div id="page_content">
+		<section>
+<div class="heading"><p>Campaign to Date</p></div>
+<span>Spend</span><div id="spendTD"></div>
+<span>Impressions</span><div id="ImpressionTD"></div>
+<span>Clicks</span><div id="ClickTD"></div>
+<span>Conversions</span><div id="ConversionTD"></div>
+<div class="heading"><p>Campaign to Date eCPA Trend</p></div>
+<div id="trendECPA"</div>
+            </div>
+        </div>
+    </div>
+        </section>
+
+
+
 
 @section scripts {
 <script>
     $(document).ready(function () {
         SetupGrids();
+        SetupCharts();
     });
 
     function SetupGrids() {
         $("#gridMTD").kendoGrid({
             columns: [
             {
+                
                 title: "Month to Date: x/1/2016 thru x/x/2016",
                 columns: [
                 { field: "Budget" },
-                { field: "MediaSpend", title: "Spend" },
-                { field: "Pacing" },
+                { field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}" },
+                { field: "Pacing", format: "{0:$###,###,###,###,###,###,###,###.##}" },
                 { field: "Impressions" },
                 { field: "Clicks" },
-                { field: "CTR" },
-                { field: "eCPC" },
+                { field: "CTR", format: "{0:$###,###,###,###,###,###,###,###.##}" },
+                { field: "eCPC", format: "{0:$###,###,###,###,###,###,###,###.##}" },
                 { field: "Conversions" },
-                { field: "eCPA" }
+                { field: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}" },
                 ]
             }
             ],
@@ -49,14 +72,14 @@
                 title: "Previous Month: x/1/2016 thru x/x/2016",
                 columns: [
                 { field: "Budget" },
-                { field: "MediaSpend", title: "Spend" },
-                { field: "Pacing" },
+                { field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}" },
+                { field: "Pacing", format: "{0:$###,###,###,###,###,###,###,###.##}" },
                 { field: "Impressions" },
                 { field: "Clicks" },
-                { field: "CTR" },
-                { field: "eCPC" },
+                { field: "CTR", format: "{0:$###,###,###,###,###,###,###,###.##}" },
+                { field: "eCPC", format: "{0:$###,###,###,###,###,###,###,###.##}" },
                 { field: "Conversions" },
-                { field: "eCPA" }
+                { field: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}" }
                 ]
             }
             ],
@@ -71,5 +94,99 @@
             }
         });
     }
+    function SetupCharts() {
+        $("#trendECPA").kendoChart({
+            seriesDefaults:{
+                type: "line"
+            },
+            series: [{
+                field: "eCPA", title: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}"
+            }],
+            categoryAxis: {
+                categories: []
+            },
+            dataSource: {
+                transport: {
+                    read: {
+                        type: 'post',
+                        dataType: 'json',
+                        url: '@Url.Action("TestCalls", "Test")',
+                    }
+                }
+            }
+        });
+    }
+
+//sparkline charts
+    function SetupCharts() {
+        $("#spendTD").kendoSparkline({
+            type: "area",
+            lineColor: '#2424e2',
+            fillColor: '#abbad8',
+            series: [{
+                field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}"
+            }],
+            dataSource: {
+                transport: {
+                    read: {
+                        type: 'post',
+                        dataType: 'json',
+                        url: '@Url.Action("TestCalls", "Test")',
+                    }
+                }
+            }
+        });
+    }
+    $("#ImpressionTD").kendoSparkline({
+        type: "area",
+        lineColor: '#2424e2',
+        fillColor: '#abbad8',
+        series: [{
+            field: "Impressions", title: "Impression", format: "{0:$###,###,###,###,###,###,###,###.##}"
+        }],
+        dataSource: {
+            transport: {
+                read: {
+                    type: 'post',
+                    dataType: 'json',
+                    url: '@Url.Action("TestCalls", "Test")',
+                    }
+                }
+            }
+    });
+    $("#ClickTD").kendoSparkline({
+        type: "area",
+        lineColor: '#2424e2',
+        fillColor: '#abbad8',
+        series: [{
+            field: "Clicks", title: "Click"
+        }],
+        dataSource: {
+            transport: {
+                read: {
+                    type: 'post',
+                    dataType: 'json',
+                    url: '@Url.Action("TestCalls", "Test")',
+                }
+            }
+        }
+    });
+    $("#ConversionTD").kendoSparkline({
+        type: "area",
+        lineColor: '#2424e2',
+        fillColor: '#abbad8',
+        series: [{
+            field: "Conversions", title: "Conversion"
+        }],
+        dataSource: {
+            transport: {
+                read: {
+                    type: 'post',
+                    dataType: 'json',
+                    url: '@Url.Action("TestCalls", "Test")',
+                }
+            }
+        }
+    });
 </script>
 }
