--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -10,10 +10,12 @@
         <div class="client_name">@Model.ProgAdvertiser.Name</div>
     </div>
 </div>
-<div id="page_content"></div>
+<div id="page_content">
     <div id="container">
     	<div id="page_content">
-		<section>
+		    <section>
+<div id="gridMTD"></div>
+<div id="gridPrevMonth"></div>
 <div class="heading"><p>Campaign to Date</p></div>
 <span>Spend</span><div id="spendTD"></div>
 <span>Impressions</span><div id="ImpressionTD"></div>
@@ -21,13 +23,10 @@
 <span>Conversions</span><div id="ConversionTD"></div>
 <div class="heading"><p>Campaign to Date eCPA Trend</p></div>
 <div id="trendECPA"</div>
-            </div>
+            </section>
         </div>
     </div>
-        </section>
-
-
-
+</div>
 
 @section scripts {
 <script>
