--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -32,10 +32,12 @@
 <script>
     $(document).ready(function () {
         SetupGrids();
-        SetupCharts();
+        SetupSparklineCharts();
+        SetupMainChart();
     });
 
-    function SetupGrids() {
+    function SetupGrids()
+    {
         $("#gridMTD").kendoGrid({
             columns: [
             {
@@ -93,31 +95,47 @@
             }
         });
     }
-    function SetupCharts() {
-        $("#trendECPA").kendoChart({
-            seriesDefaults:{
-                type: "line"
+
+    function SetupMainChart()
+    {
+        var datasource = new kendo.data.DataSource({
+            transport: {
+                read: {
+                    type: 'post',
+                    dataType: 'json',
+                    url: '@Url.Action("TestCalls", "Test")',
+                }
             },
-            series: [{
-                field: "eCPA", title: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}"
-            }],
-            categoryAxis: {
-                categories: []
-            },
-            dataSource: {
-                transport: {
-                    read: {
-                        type: 'post',
-                        dataType: 'json',
-                        url: '@Url.Action("TestCalls", "Test")',
+            schema: {
+                model: {
+                    id: 'Id',
+                    fields: {
+                        Date: { type: 'date' }
+                        // rest of fields: numbers
                     }
                 }
             }
         });
+        $("#trendECPA").kendoChart({
+            dataSource: datasource,
+            series: [
+                { field: "eCPA", type: "area", color: "rgb(13, 141, 214)", tooltip: { format: "{0:C}" } }
+            ],
+            categoryAxis: {
+                field: "Date",
+                labels: { rotation: -90, step: 5 },
+                axisCrossingValue: [0, 2000],
+                majorGridLines: { visible: false }
+            },
+            valueAxis: [
+                { labels: { format: "C" } }
+            ],
+            tooltip: { visible: true }
+        });
     }
 
-//sparkline charts
-    function SetupCharts() {
+    function SetupSparklineCharts()
+    {
         $("#spendTD").kendoSparkline({
             type: "area",
             lineColor: '#2424e2',
@@ -135,57 +153,57 @@
                 }
             }
         });
-    }
-    $("#ImpressionTD").kendoSparkline({
-        type: "area",
-        lineColor: '#2424e2',
-        fillColor: '#abbad8',
-        series: [{
-            field: "Impressions", title: "Impression", format: "{0:$###,###,###,###,###,###,###,###.##}"
-        }],
-        dataSource: {
-            transport: {
-                read: {
-                    type: 'post',
-                    dataType: 'json',
-                    url: '@Url.Action("TestCalls", "Test")',
+        $("#ImpressionTD").kendoSparkline({
+            type: "area",
+            lineColor: '#2424e2',
+            fillColor: '#abbad8',
+            series: [{
+                field: "Impressions", title: "Impression", format: "{0:$###,###,###,###,###,###,###,###.##}"
+            }],
+            dataSource: {
+                transport: {
+                    read: {
+                        type: 'post',
+                        dataType: 'json',
+                        url: '@Url.Action("TestCalls", "Test")',
                     }
                 }
             }
-    });
-    $("#ClickTD").kendoSparkline({
-        type: "area",
-        lineColor: '#2424e2',
-        fillColor: '#abbad8',
-        series: [{
-            field: "Clicks", title: "Click"
-        }],
-        dataSource: {
-            transport: {
-                read: {
-                    type: 'post',
-                    dataType: 'json',
-                    url: '@Url.Action("TestCalls", "Test")',
+        });
+        $("#ClickTD").kendoSparkline({
+            type: "area",
+            lineColor: '#2424e2',
+            fillColor: '#abbad8',
+            series: [{
+                field: "Clicks", title: "Click"
+            }],
+            dataSource: {
+                transport: {
+                    read: {
+                        type: 'post',
+                        dataType: 'json',
+                        url: '@Url.Action("TestCalls", "Test")',
+                    }
                 }
             }
-        }
-    });
-    $("#ConversionTD").kendoSparkline({
-        type: "area",
-        lineColor: '#2424e2',
-        fillColor: '#abbad8',
-        series: [{
-            field: "Conversions", title: "Conversion"
-        }],
-        dataSource: {
-            transport: {
-                read: {
-                    type: 'post',
-                    dataType: 'json',
-                    url: '@Url.Action("TestCalls", "Test")',
+        });
+        $("#ConversionTD").kendoSparkline({
+            type: "area",
+            lineColor: '#2424e2',
+            fillColor: '#abbad8',
+            series: [{
+                field: "Conversions", title: "Conversion"
+            }],
+            dataSource: {
+                transport: {
+                    read: {
+                        type: 'post',
+                        dataType: 'json',
+                        url: '@Url.Action("TestCalls", "Test")',
+                    }
                 }
             }
-        }
-    });
+        });
+    }
 </script>
 }
